@@ -208,3 +208,51 @@ describe Gecode::Constraints::Set::Connection, ' (sum with weights)' do
   
   it_should_behave_like 'connection constraint'
 end
+
+describe Gecode::Constraints::Set::Connection, ' (include)' do
+  before do
+    @model = Gecode::Model.new
+    @set = @model.set_var([], 2..5)
+    @array = @model.int_var_array(4, 0..9)
+    @array.must_be.distinct
+    @model.branch_on @array
+    #@model.branch_on @model.wrap_enum([@set])
+    
+    @expect = lambda do |rhs, strength, reif_var|
+      Gecode::Raw.should_receive(:match).once.with(@model.active_space, 
+        @set.bind, an_instance_of(Gecode::Raw::IntVarArray))
+    end
+    
+    @expect_options = lambda do |strength, reif_var|
+      @expect.call(@array, strength, reif_var)
+    end
+    @invoke_options = lambda do |hash|
+      @set.must.include(@array, hash)
+      @model.solve!
+    end
+  end
+  
+  it 'should translate to a match constraint' do
+    Gecode::Raw.should_receive(:match).once.with(@model.active_space, 
+      @set.bind, an_instance_of(Gecode::Raw::IntVarArray))
+    @set.must.include @array
+    @model.solve!
+  end
+  
+  it 'should constrain the variables to be included in the set' do
+    @set.must.include @array
+    @model.solve!.should_not be_nil
+    @array.all?{ |x| @set.glb.include? x.val }.should be_true
+  end
+  
+  it 'should raise error if the right hand side is not an array of variables' do
+    lambda{ @set.must.include 'hello' }.should raise_error(TypeError)
+  end
+  
+  it 'should raise error if negated' do
+    lambda{ @set.must_not.include @array }.should raise_error(
+      Gecode::MissingConstraintError)
+  end
+  
+  it_should_behave_like 'non-reifiable set constraint'
+end
